[gd_scene load_steps=13 format=2]

[ext_resource path="res://frontend/NPCs/WalterScene.gd" type="Script" id=1]
[ext_resource path="res://backend/NPCs/Walter.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/npcs/walter/0_Jeweler_Idle Blinking_023.png" type="Texture" id=3]
[ext_resource path="res://assets/npcs/walter/0_Jeweler_Idle Blinking_024.png" type="Texture" id=4]
[ext_resource path="res://assets/npcs/walter/0_Jeweler_Idle Blinking_028.png" type="Texture" id=5]
[ext_resource path="res://assets/npcs/walter/0_Jeweler_Idle Blinking_026.png" type="Texture" id=6]
[ext_resource path="res://assets/npcs/walter/0_Jeweler_Idle Blinking_027.png" type="Texture" id=7]
[ext_resource path="res://assets/npcs/walter/0_Jeweler_Idle Blinking_025.png" type="Texture" id=8]
[ext_resource path="res://assets/sfx/fabric_sounds.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/npcs/walter/background/factory.png" type="Texture" id=10]
[ext_resource path="res://assets/npcs/bob/background/big_38f904de16.jpg" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="WalterScene" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0
bus = "BackgroundFx"

[node name="IntroductionPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = "WalterSpeech"

[node name="WalterSprite" type="AnimatedSprite" parent="."]
position = Vector2( 870, 440 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 14 )
frame = 5
playing = true
flip_h = true

[node name="SceneLoaded" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WalterBack" parent="." instance=ExtResource( 2 )]

[node name="woods" type="Sprite" parent="."]
position = Vector2( 517.264, 302.11 )
scale = Vector2( 1.05613, 0.911864 )
z_index = -3
texture = ExtResource( 11 )

[node name="Factory" type="Sprite" parent="."]
position = Vector2( 715.029, 249.127 )
scale = Vector2( 1.25049, 0.952153 )
z_index = -1
texture = ExtResource( 10 )

[connection signal="finished" from="IntroductionPlayer" to="." method="_on_IntroductionPlayer_finished"]
[connection signal="timeout" from="SceneLoaded" to="." method="_on_SceneLoaded_timeout"]
[connection signal="new_trigger_phrase" from="WalterBack" to="." method="_on_WalterBack_new_trigger_phrase"]
